# pyImpact

./: .gitignore  pyproject.toml
.github/workflows/: ci.yml
src/pyimpact/analyzer/: graph_builder.py  parser.py  resolver.py  scanner.py
src/pyimpact/app/: callees.py  callers.py  colors.py  impact.py  visualize.py
src/pyimpact/cli/: main.py
src/pyimpact/core/: ids.py  model.py
src/pyimpact/query/: engine.py  subgraph.py
src/pyimpact/reporting/: graphviz.py
tests/fixtures/: parser_sample.py
tests/unit/: test_app_impact.py  test_graph_builder.py  test_graphviz.py  test_impact_analysis.py  test_model.py  test_parser.py  test_resolver.py  test_scanner.py  test_subgraph.py
