[project]
name = "pyimpact"
version = "0.1.0"
description = "Function dependency graph + impact analysis for Python codebases"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "YOUR NAME" }]
dependencies = [
  "typer>=0.12",
  "rich>=13.7",
  "graphviz>=0.20",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "black>=24.0",
  "mypy>=1.10",
  "pre-commit>=3.7",
]

[project.scripts]
pyimpact = "pyimpact.cli.main:app"


[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=pyimpact --cov-report=term-missing"

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100
